BugFix: Lock & Visible & Full

--- a/packages/runtime/src/style.css
+++ b/packages/runtime/src/style.css
@@ -20,6 +20,9 @@ html, body {
 }
 
 .ridge-is-full {
+    position: absolute;
+    left: 0;
+    top: 0;
     width: 100%;
     height: 100%;
 }
